# wallcrop

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: monitors.yml  monitors_actual_size.yml
src/wallcrop/: _version.py  create_monitors_file.py  wallcrop.py  wallswitch.py
